fixed alignment of boxes in profile

--- a/client/src/components/pages/Account.css
+++ b/client/src/components/pages/Account.css
@@ -16,7 +16,8 @@
 .accountinfo-box {
   width: 70%;
   height: 37px;
-  margin-left: 5%;
+  margin-left: auto;
+  margin-right: 4%;
   border-width: 0.2px;
   box-sizing: border-box;
   border-radius: 20px;
